examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
fn main() -> Unit {
    let x: String = match Some(1) {
        Some(v) -> v,
        None -> 0,
    }
    x
}
